# mess-account

./: .gitignore  README.md  index.html  package-lock.json  package.json  test.scpt  test_dock.swift  vite.config.ts
.github/workflows/: publish.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
